# void

./: .env.example  .env.independence  .gitignore  AGENTS-EXAMPLE.md  AGENTS.md  CHIMERA-INTEGRATION-COMPLETE.md  CHIMERA-INTEGRATION.md  CHIMERA-MERGE-QUICKREF.md  CHIMERA-PR-BODY.md  CHIMERA-REVIEWER-CHECKLIST.md  CHIMERA-WASM-INTEGRATION.md  CLAUDE-CONTEXT-2025-08-25.md  CLAUDE.md  CREATE_PR_COMMAND.txt  FNPM-OVERVIEW.md  LANGGRAPH-MCP-INTEGRATION.md  LIVING-TEMPLE-ARCHITECTURE.md  MANIFESTO-JSON-EXORCISM.md  MEMORY-OBSERVER-SYSTEM.md  META-EVOLUTION.md  MORPHISM_MADNESS.md  POLY-LLM-PANTHEON.md  PROTEIN-HASH-MANIFESTO.md  PR_TEMPLATE_CODEX_HARDENING.md  README-QUANTUM.md  README.md  build-void.sh  chaos-report-1756224511.md  genome-extraction-report.md  grok-integration-launcher.cjs  guardian-dance-3d.html  homebrew-void-fnpm.rb  integration-guide.md  launch-quantum.cjs  launch-void-quantum.cjs  morphism-ecosystem-visualization.html  package-lock.json  package.json  quantum-app.cjs  quantum-consciousness-1756226631.md  (+10 more)
.github/: pull_request_template.md
artifacts/: announcement.md  conscience-check.json  genome.SHA  github-release-body.md  grafana-annotation-t5.json  personal-note.md  preflight-check.json  release-notes.md
ceremony/: OFFLINE_RELEASE_FILLER.sh  PLAN_B_MONITOR.sh  T0_SEQUENCE.sh  (+1 more)
tools/protein-hash/: Cargo.toml  README.md
tools/protein-hash/examples/: add_a.ts  add_arrow.ts  add_b.ts  mul_commute_1.ts  mul_commute_2.ts
tools/protein-hash/src/: ast.rs  compare.rs  graph.rs  main.rs  normalize.rs  spectrum.rs
tools/protein-hash/tests/: spectrum_smoke.rs
tools/virus-deconstructor/: Cargo.toml  README.md
tools/virus-deconstructor/src/: main.rs  purity.rs
tools/virus-deconstructor/tests/: purity_tests.rs
(+537 files in other folders)
